--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "next": "^14.2.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
