--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-backpack": "^0.1.14",
     "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-ledger": "^0.9.28",
     "@solana/wallet-adapter-phantom": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
+    "@solana/wallet-adapter-slope": "^0.5.21",
     "@solana/wallet-adapter-solflare": "^0.6.31",
+    "@solana/wallet-adapter-torus": "^0.11.31",
+    "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.95.3",
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
