--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.14",
     "postcss-nested": "^7.0.2",
     "prettier": "^3.3.3",
+    "nodemailer": "^7.0.3", 
     "tailwindcss": "^3.3.3"
   }
 }
