--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node scripts/apply-font.cjs && next dev",
     "dev:simple": "next dev",
     "dev:polling": "NODE_ENV=development node scripts/apply-font.cjs && next dev",
-    "build": "node scripts/apply-font.cjs && next build",
+    "build": "node scripts/apply-font.cjs || true && next build",
+    "build:simple": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "eslint .",
@@ -56,7 +57,6 @@
     "postcss": "^8.4.14",
     "postcss-nested": "^7.0.2",
     "prettier": "^3.3.3",
-    "nodemailer": "^7.0.3", 
     "tailwindcss": "^3.3.3"
   }
 }
